k8s/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx-da
  labels:
    app: nginx-da
spec:
  selector:
    matchLabels:
      app: nginx-pod
  template:
    metadata:
      labels:
        app: nginx-pod
    spec:
      volumes:
        - name: log-vol
          hostPath:
            path: /data
      containers:
        - name: nginx
          image: nginx:1.14
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
