k8s/init.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init
spec:
  volumes:
  - name: nginx-index
    emptyDir: {}

  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: nginx-index
      mountPath: "/usr/share/nginx/html"
