k8s/nginx.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-xeon
  labels:
    app: nginx
spec:
  imagePullSecrets:
  - name: harbor-secret
  containers:
  - name: nginx-label
    image: 10.0.0.11:8888/images/nginx:latest
    imagePullPolicy: IfNotPresent 
    ports:
    - name: nginx
      containerPort: 80
#  - name: redis
#    image: redis 
#    imagePullPolicy: IfNotPresent 
#    ports:
#    - name: redis 
#      containerPort: 6379
#  nodeSelector:
#    CPU: Xeon
