k8s/post.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hook

spec:
  nodeName: docker-11
  volumes:
    - name: nginx-log
      hostPath:
        path: /var/log/nginx/

  containers:
    - name: nginx
      image: nginx:alpine
      imagePullPolicy: IfNotPresent
      lifecycle:
        postStart:
          exec:
            command: [sh,-c,'echo k8s > /usr/share/nginx/html/index.html']
        preStop:
          exec:
            command: [sh,-c,'echo bey > /var/log/nginx/stop.log']
      ports:
        - containerPort: 80

      volumeMounts: 
        - name: nginx-log
          mountPath: /var/log/nginx/
#  hostNetwork: true
