k8s/wp.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wordpress-ns
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress-ns
  name: mysql-dp
  labels:
    app: mysql-dp
spec:
  replicas: 1
  selector:
    matchLabels:
      run: mysql-dp
  template:
    metadata:
      labels:
        run: mysql-dp
    spec:
      nodeSelector: 
        CPU: Xeon
      volumes:
      - name: mysql-vol
        hostPath:
          path: /data/mysql 
      containers:
      - name: mysql
        image: mysql:8.0.26
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: mysql-vol
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: wordpress-ns
  name: wordpress-dp
  labels:
    app: wordpress-dp
spec:
  replicas: 3
  selector:
    matchLabels:
      run: wordpress-dp
  template:
    metadata:
      labels:
        run: wordpress-dp
    spec:
      volumes: 
      - name: wp-data
        nfs:
          server: 10.0.0.5
          path: /data/nfs
      containers:
      - name: wordpress
        image: wordpress
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: wp-data
          mountPath: /var/www/html/
---
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress-ns
  name: wordpress-svc
spec:
  selector:
    run: wordpress-dp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress-ns
  name: mysql-svc
spec:
  selector:
    run: mysql-dp
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wordpress-ns
  name: wordpress
spec:
  rules:
  - host: mywordpress0131.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: wordpress-svc
            port:
              number: 80
